--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="activity_main_btn2">Choose Images to make a collage.</string>
     <string name="activity_edit_iv1">Edit bitmap image view</string>
     <string name="activity_edit_tv1">Edit Image</string>
+    <string name="activity_edit_iv2">Go to home button.</string>
 </resources>
