--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Image Magic</string>
     <string name="activity_main_tv1">Welcome to Image Magic.</string>
-    <string name="activity_main_btn1">Choose Image to edit.</string>
+    <string name="activity_main_btn1">Choose an Image to edit.</string>
     <string name="activity_main_btn2">Choose Images to make a collage.</string>
     <string name="activity_edit_iv1">Edit bitmap image view</string>
     <string name="activity_edit_tv1">Edit Image</string>
